--- a/pekoe/package.json
+++ b/pekoe/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "next": "14.0.3",
+    "framer-motion": "^10.16.9",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
     "ress": "^5.0.2"
