--- a/cup/package.json
+++ b/cup/package.json
@@ -22,8 +22,10 @@
     "@vitejs/plugin-react": "^4.2.0",
     "classnames": "^2.3.2",
     "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "prettier": "^3.1.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "zustand": "^4.4.7"
