--- a/cup/package.json
+++ b/cup/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
+    "@types/node": "^20.10.1",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
@@ -25,7 +26,9 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "path": "^0.12.7",
     "prettier": "^3.1.0",
+    "ress": "^5.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "zustand": "^4.4.7"
