--- a/cup/package.json
+++ b/cup/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "framer-motion": "^10.16.12",
     "path": "^0.12.7",
     "prettier": "^3.1.0",
     "ress": "^5.0.2",
